--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "intercept"]
 	path = intercept
 	url = https://github.com/intercept/intercept.git
+[submodule "brofiler"]
+	path = brofiler
+	url = https://github.com/dedmen/brofiler.git
