Move to PerFrame handler to work on server

--- a/src/ArmaScriptProfiler.vcxproj
+++ b/src/ArmaScriptProfiler.vcxproj
@@ -154,10 +154,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\brofiler\BrofilerCore\Brofiler.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\Common.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\Core.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\Event.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\EventDescriptionBoard.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\Message.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\ProfilerServer.h" />
+    <ClInclude Include="..\brofiler\BrofilerCore\ThreadID.h" />
     <ClInclude Include="scriptProfiler.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\brofiler\BrofilerCore\CallstackCollector.cpp" />
+    <ClCompile Include="..\brofiler\BrofilerCore\CityHash.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Core.cpp">
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)brofilercore.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)brofilercore.obj</ObjectFileName>
@@ -166,14 +175,12 @@
     </ClCompile>
     <ClCompile Include="..\brofiler\BrofilerCore\Event.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\EventDescriptionBoard.cpp" />
+    <ClCompile Include="..\brofiler\BrofilerCore\Memory.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Message.cpp" />
-    <ClCompile Include="..\brofiler\BrofilerCore\Platform\SamplingProfiler.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Platform\SchedulerTrace.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Platform\SymbolEngine.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Platform\Windows\EtwTracer.cpp" />
-    <ClCompile Include="..\brofiler\BrofilerCore\Platform\Windows\Sampler.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Platform\Windows\SymEngine.cpp" />
-    <ClCompile Include="..\brofiler\BrofilerCore\Platform\Windows\WinThreadsEnumerator.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\ProfilerServer.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\Serialization.cpp" />
     <ClCompile Include="..\brofiler\BrofilerCore\SwitchContextCollector.cpp" />
