--- a/src/ArmaScriptProfiler.vcxproj
+++ b/src/ArmaScriptProfiler.vcxproj
@@ -162,6 +162,9 @@
     <ClInclude Include="..\brofiler\BrofilerCore\Message.h" />
     <ClInclude Include="..\brofiler\BrofilerCore\ProfilerServer.h" />
     <ClInclude Include="..\brofiler\BrofilerCore\ThreadID.h" />
+    <ClInclude Include="AdapterArmaDiag.hpp" />
+    <ClInclude Include="AdapterBrofiler.hpp" />
+    <ClInclude Include="ProfilerAdapter.hpp" />
     <ClInclude Include="scriptProfiler.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -224,6 +227,8 @@
     <ClCompile Include="..\intercept\src\client\intercept\shared\client_types.cpp" />
     <ClCompile Include="..\intercept\src\client\intercept\shared\containers.cpp" />
     <ClCompile Include="..\intercept\src\client\intercept\shared\types.cpp" />
+    <ClCompile Include="AdapterArmaDiag.cpp" />
+    <ClCompile Include="AdapterBrofiler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scriptProfiler.cpp" />
   </ItemGroup>
