--- a/src/ArmaScriptProfiler.vcxproj.filters
+++ b/src/ArmaScriptProfiler.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Quelldateien">
@@ -271,8 +271,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="hooks.asm">
+    <MASM Include="hooks.asm">
       <Filter>Quelldateien</Filter>
-    </None>
+    </MASM>
   </ItemGroup>
 </Project>
