--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.0)
+cmake_minimum_required (VERSION 3.13)
 
 set(INTERCEPT_CLIENT_PATH "${CMAKE_SOURCE_DIR}/intercept/src/client")
 set(BROFILER_BASE_PATH "${CMAKE_SOURCE_DIR}/brofiler")
@@ -22,30 +22,63 @@ add_definitions(/D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS) #No I don't cheat!
 
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/rv/${INTERCEPT_PLUGIN_NAME}/intercept")
 
-file(GLOB_RECURSE INTERCEPT_ASP_SOURCES *.h *.hpp *.c *.cpp)
+file(GLOB_RECURSE INTERCEPT_ASP_SOURCES *.h *.hpp *.c *.cpp *.asm *.s)
 SOURCE_GROUP("src" FILES ${INTERCEPT_ASP_SOURCES})
 
 file(GLOB INTERCEPT_SOURCES "${INTERCEPT_CLIENT_PATH}/intercept/client/*.cpp"  "${INTERCEPT_CLIENT_PATH}/intercept/client/sqf/*.cpp" "${INTERCEPT_CLIENT_PATH}/intercept/shared/*.cpp")
 SOURCE_GROUP("intercept" FILES ${INTERCEPT_SOURCES})
 
-file(GLOB BROFILER_SOURCES 
-"${BROFILER_BASE_PATH}/ThirdParty/TaskScheduler/Scheduler/Source/"
-#"${BROFILER_BASE_PATH}/BrofilerCore/CallstackCollector.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/Core.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/Event.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/EventDescriptionBoard.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/Message.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/ProfilerServer.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/Serialization.cpp"
-#"${BROFILER_BASE_PATH}/BrofilerCore/SysCallCollector.cpp"
-"${BROFILER_BASE_PATH}/BrofilerCore/*.cpp"
-"${BROFILER_BASE_PATH}/BrofilerCore/Platform/*.cpp"
-)
-SOURCE_GROUP("src/brofiler" FILES ${BROFILER_SOURCES})
+if (WITH_BROFILER)
+	add_compile_definitions(WITH_BROFILER)
+	file(GLOB BROFILER_SOURCES 
+	"${BROFILER_BASE_PATH}/ThirdParty/TaskScheduler/Scheduler/Source/"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/CallstackCollector.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/Core.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/Event.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/EventDescriptionBoard.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/Message.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/ProfilerServer.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/Serialization.cpp"
+	#"${BROFILER_BASE_PATH}/BrofilerCore/SysCallCollector.cpp"
+	"${BROFILER_BASE_PATH}/BrofilerCore/*.cpp"
+	"${BROFILER_BASE_PATH}/BrofilerCore/Platform/*.cpp"
+	"${BROFILER_BASE_PATH}/BrofilerCore/Platform/Windows/*.cpp"
+	)
+	SOURCE_GROUP("src/brofiler" FILES ${BROFILER_SOURCES})
+else()
+	SET(BROFILER_SOURCES "")
+	list(REMOVE_ITEM INTERCEPT_ASP_SOURCES "${CMAKE_SOURCE_DIR}/src/AdapterBrofiler.cpp")
+endif()
+
+if (WITH_CHROME)
+	add_compile_definitions(WITH_CHROME)
+else()
+	list(REMOVE_ITEM INTERCEPT_ASP_SOURCES "${CMAKE_SOURCE_DIR}/src/AdapterChrome.cpp")
+endif()
+
+
+if(CMAKE_COMPILER_IS_GNUCXX)
+	list(REMOVE_ITEM INTERCEPT_ASP_SOURCES "${CMAKE_SOURCE_DIR}/src/hooks.asm")
+endif()
 
 set(library_sources ${INTERCEPT_ASP_SOURCES})
 
 add_library( ${INTERCEPT_PLUGIN_NAME} SHARED ${library_sources} ${INTERCEPT_SOURCES} ${BROFILER_SOURCES})
+
+
+
+if (MSVC AND CMAKE_CL_64)
+  add_custom_command(TARGET ${INTERCEPT_PLUGIN_NAME}
+                            PRE_BUILD
+                            COMMAND "ml64" /c /W2 /nologo /errorReport:none /Zf 
+                            /Fo${CMAKE_BINARY_DIR}/src/CMakeFiles/ArmaScriptProfiler_x64.dir/hooks.asm.obj
+							#${CMAKE_PROJECT_NAME}.dir/Debug/ 
+                            #/Fo"C:/MYPROJECT/Build/Main_ms100_64/MYPROJECT.dir/Debug/"
+                            ${CMAKE_SOURCE_DIR}/src/hooks.asm
+                            COMMENT "Building asm file")
+endif()
+
+
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${INTERCEPT_INCLUDE_PATH} )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${BROFILER_INCLUDE_PATH} )
@@ -58,15 +91,40 @@ target_link_libraries(${INTERCEPT_PLUGIN_NAME} ${LINK_LIBS})
 target_link_libraries(${INTERCEPT_PLUGIN_NAME} ${LINK_LIBS})
 set_target_properties(${INTERCEPT_PLUGIN_NAME} PROPERTIES PREFIX "")
 set_target_properties(${INTERCEPT_PLUGIN_NAME} PROPERTIES FOLDER ArmaScriptProfiler)
-
+message("${CONFIGURATION}")
 if(CMAKE_COMPILER_IS_GNUCXX)
-	SET(CMAKE_CXX_FLAGS "-std=c++1z -O2 -s -fPIC -fpermissive -static-libgcc -static-libstdc++")#-march=i686 -m32
+	set_source_files_properties(hooks.s PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp")
+	add_compile_definitions(__linux__)
+	list(REMOVE_ITEM INTERCEPT_ASP_SOURCES "${CMAKE_SOURCE_DIR}/src/hooks.asm")
+
+	target_compile_options(
+		${INTERCEPT_PLUGIN_NAME} PRIVATE 
+		"-std=c++1z"
+		"-O2"
+		"-s"
+		"-fPIC"
+		"-fpermissive"
+		"-static-libgcc"
+		"-static-libstdc++"
+		"-march=i686"
+		"-m32"
+		"-Wno-ignored-attributes"
+		"-static"
+	)
+	target_link_options(${INTERCEPT_PLUGIN_NAME} PRIVATE "-m32" "-fPIC" "-static" "-static-libgcc" "-static-libstdc++") 
 	set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-	set(CMAKE_SHARED_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 else()
-	set(CMAKE_CXX_FLAGS_DEBUG "/D _DEBUG /MTd /Zi /Ob0 /Od /RTC1 /MP /EHsc")
-	set(CMAKE_CXX_FLAGS_RELEASE "/MT /Zi /O2 /Ob1 /EHsc /MP") #with debug info
-	set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "/OPT:REF /DEBUG:FULL") 
+
+	target_compile_options(
+		${INTERCEPT_PLUGIN_NAME} PRIVATE 
+		"/MP" "/Zi"
+		"$<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:/MT>"
+		"$<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:/Ox>"
+		"$<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:/Ob2>"
+		"$<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:/Oi>"
+		"$<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:/Ot>"
+	)
+	target_link_options(${INTERCEPT_PLUGIN_NAME} PRIVATE "/OPT:REF" "/OPT:ICF" "/DEBUG:FULL") 
 endif()
 
 
