--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required (VERSION 3.6)
-project (ArmaScriptProfiler)
+cmake_minimum_required (VERSION 3.13)
+project (ArmaScriptProfiler CXX ASM)
 
 find_package (Threads)
 
 option(USE_64BIT_BUILD "USE_64BIT_BUILD" OFF)
 option(USE_STATIC_LINKING "USE_STATIC_LINKING" ON)
+option(WITH_BROFILER "WITH_BROFILER" OFF)
+option(WITH_CHROME "WITH_CHROME" OFF)
 
 if(USE_STATIC_LINKING) 
 	message("WARNING: Linking statically")
@@ -14,13 +16,13 @@ else()
 	set(INTERCEPT_LINK_TYPE "dynamic")
 endif()
 
-if("${CMAKE_GENERATOR}" MATCHES "Visual Studio 15 2017 Win64")
+if(MSVC AND CMAKE_CL_64)
 	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++latest" )
 	set( USE_64BIT_BUILD ON)
-elseif("${CMAKE_GENERATOR}" MATCHES "Visual Studio 15 2017")
+elseif(MSVC)
 	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++latest" )
-elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
-	message(FATAL_ERROR "ERROR: You need a C++17 compatible compiler")
+#elseif(MSVC)
+#	message(FATAL_ERROR "ERROR: You need a C++17 compatible compiler")
 endif()
 
 message("GENERATOR USED: '${CMAKE_GENERATOR}'")
@@ -29,9 +31,9 @@ message("COMPILER USED: '${CMAKE_CXX_COMPILER_ID}'")
 set(CMAKE_CL_64 ${USE_64BIT_BUILD})
 
 if(USE_64BIT_BUILD)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/win64/")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/release/@ArmaScriptProfiler/intercept")
 else()
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/win32/")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/release/@ArmaScriptProfiler/intercept")
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
